hphp/hack/test/typecheck/reified_generics/enforceable_type_const_as.php.exp
WARN: File "enforceable_type_const_as.php", line 13, characters 5-17:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `this::TE`. (Warn[12012])
WARN: File "enforceable_type_const_as.php", line 14, characters 5-20:
This `as` assertion will always fail and lead to an exception at runtime. The expression on the left has type `int` which shares no values with `this::TNotE`. (Warn[12012])
ERROR: File "enforceable_type_const_as.php", line 14, characters 10-20:
Invalid `as` expression hint (Typing[4195])
  File "enforceable_type_const_as.php", line 10, characters 23-27:
  The `as` operator cannot be used with the abstract type constant TNotE because it is not marked `<<__Enforceable>>`
